--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="bgvideo">
-            <video src="static/files/bgvideo1.mp4" type="video.mp4" autoplay muted></video>
+            <video src="static/files/bgvideo1.mp4" type="video.mp4" autoplay muted loop></video>
             <div class="effect"></div>
             <div class="video-text">
               <h1>Будущее здесь</h1>
