--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
-                <img src="https://images.pexels.com/photos/39018/cards-jass-cards-card-game-strategy-39018.jpeg?auto=compress&cs=tinysrgb&w=600"
+                <img src="static/images/vtpol.jpg"
                     alt="Foto" class="card card-img-top">
                 <div class=" card card-body">
                     <p class="card-text">Расклады таро помогут найти вторую половину.</p>
