--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                         Author of the book "Tutorial on Tarot Cards".
                         Author of dozens of layouts in various areas of life. She is the owner of occult knowledge, as
                         well as an expert in love relationships.
-                        You can order an online consultation by writing to 03091983masha@gmail.com <a href="03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰</p>
+                        <p class="lead my-3 my_font"> You can order an online consultation by writing to 03091983masha@gmail.com
+                        <a href="03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰</p>
                     </p>
                     <a href="https://www.youtube.com/@mariazarubina5655/videos" class="btn btn-warning">Читать
                         дальше</a>
