--- a/html_vv.html
+++ b/html_vv.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="static/styles/style.css">
 </head>
 <body>
-	<div class="centr"><h4 class="zag my-3">Как часто можно ходить к тарологу</h4></div>
+	<div class="centr"><h4 class="border rounded-pill zag_1 my-3 mx-auto">Как часто можно ходить к тарологу</h4></div>
 
 	<div class="row">
-		<div class="col-7 bg-dark border border-3
+		<div class="col-7  border border-3 rounded
               card-t mx-3">
 				<p>Бывают в Таро и аналоги психологических костылей,
 					когда человек приходит на консультации чуть ли не каждый месяц,
@@ -20,7 +20,7 @@
 					и свою жизнь в целом. Поэтому относиться к Таро надо не как к волшебной таблетке,
 					а исключительно как к инструменту диагностики и познания мира и себя.</p>
 		</div>
-		<div class="col-4 bg-dark border border-2
+		<div class="col-4 bg-dark border border-2 rounded
 		card-t mx-2">
 
 			<p>Причин популярности Таро очень много, но самая основная в том, что карты помогают разобраться в себе.
@@ -30,7 +30,7 @@
 	</div>
 
 
-<form action="/">
+<form action="index.html">
 <!--	<button class="text-bl ml-5 mt-2 "-->
 <!--	        type="sabmit">Ha главную-->
 <!--	</button>-->
