--- a/htmldn.html
+++ b/htmldn.html
@@ -11,18 +11,18 @@
 <body>
     <div class="centr">
         <div class="centr">
-            <h4 class="zag my-3">Таро Да или нет.</h4>
+            <h4 class="border rounded-pill zag my-3 mx-auto">Таро Да или нет</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-7 bg-dark border border-3
+        <div class="col-7 bg-dark border border-3 rounded
               card-t mx-3">
             <p> В жизни каждого из нас возникает сомнений сколько угодно. И неоднозначных ситуаций, в которых сложно
                 сделать выбор, тоже. Очень часто мы нуждаемся в подсказке идти на какой нибудь шаг или этого делать не
                 стоит,</p>
         </div>
-        <div class="col-4 bg-dark border border-2
+        <div class="col-4 bg-dark border border-2 rounded
 		card-t mx-2">
 
             <p>Это гадание для тех, кому нужен прямой и короткий ответ «да» или «нет». Сформулируйте свой вопрос, так,
@@ -32,7 +32,7 @@
     </div>
 
 
-    <form action="/">
+    <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
