--- a/htmlkf.html
+++ b/htmlkf.html
@@ -11,19 +11,19 @@
 <body>
     <div class="centr">
         <div class="centr">
-            <h4 class="zag my-3">Колесо Фортуны Таро</h4>
+            <h4 class="border rounded-pill zag my-3 mx-auto ">Колесо Фортуны Таро</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-7 bg-dark border border-3
+        <div class="col-7 bg-dark border border-3 rounded
               card-t mx-3">
             <p>Легенда Римской мифологии гласит: «Тот кто сегодня возвышен, завтра будет унижен, а того, кто пребывает
                 внизу, поворот Фортуны завтра может вознести на самый верх». Суть фразы в том, что каждый получит по
                 заслугам. Если кто-то не заслуживает быть «наверху» или достиг высот случайно либо нечестно, Колесо
                 Фортуны в один миг направит его «вниз», указав на то, чего он поистине достоин.</p>
         </div>
-        <div class="col-4 bg-dark border border-2
+        <div class="col-4 bg-dark border border-2 rounded
 		card-t mx-2">
 
             <p>Фортуна — богиня удачи и судьбы, божество случая. Непосредственно Колесо Фортуны учит человека терпению,
@@ -32,7 +32,7 @@
     </div>
 
 
-    <form action="/">
+    <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
