--- a/htmlkm.html
+++ b/htmlkm.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-    <div class="centr">
+    <!-- <div class="centr"> -->
         <div class="centr">
-            <h4 class="zag my-3">Какой мужчина на пороге</h4>
-        </div>
-    </div>
+            <h4 class="border rounded-pill zag my-3 mx-auto">Какой мужчина на пороге</h4>
+        </div> 
+    <!-- </div> -->
 
     <div class="row">
-        <div class="col-7 bg-dark border border-3
+        <div class="col-7 bg-dark border border-3 rounded
               card-t mx-3">
             <p>Познакомились с идеальным мужчиной, но всё равно одолевают сомнения, ждёт ли вас с ним счастливая жизнь?
                 Это можно понять, узнав его характер, жизненные приоритеты, финансовое положение и наличие других
-                женщин.</p>
+                женщин. Вы сможете решить, стоит ли тратить время на отношения с этим человеком, или лучше построить счастье с другим.</p>
         </div>
-        <div class="col-4 bg-dark border border-2
+        <div class="col-4 bg-dark border border-2 rounded
 		card-t mx-2">
 
             <p>Не рекомендуем самостоятельно делать такое сложное гадание, так как есть риск запутаться во взаимосвязях
@@ -31,7 +31,7 @@
     </div>
 
 
-    <form action="/">
+    <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
