--- a/htmlvm.html
+++ b/htmlvm.html
@@ -9,27 +9,28 @@
 
 <body>
     <div class="centr">
-        <div class="centr"><h4 class="zag my-3">Будем ли мы вместе</h4></div>
+        <div class="centr">
+            <h4 class="border rounded-pill zag my-3 mx-auto">Будем ли мы вместе</h4></div>
     </div>
 
     <div class="row">
-        <div class="col-7 bg-dark border border-3
+        <div class="col-7 bg-dark border border-3 rounded
               card-t mx-3">
+            <p>Гадание применяется для просмотра любых межличностных отношений (партнеров по бизнесу, влюбленной пары,
+    коллег, подруг, друзей), чтобы лучше понять партнера и проанализировать сложившуюся ситуацию. Также
+    расклад помогает и лучше узнать себя, понять свои ошибки.</p>
+        </div>
+        <div class="col-4 bg-dark border border-2 rounded
+		card-t mx-2">
+
             <p>Как правило, расклады таро на вопрос о том, будем ли мы вместе – это гадание на совместимость и на
                 просмотр общего будущего партнеров.Также подобные расклады помогают разобраться в сложившихся
                 отношениях, найти причины ссор и устранить недомолвки и непонимания..</p>
         </div>
-        <div class="col-4 bg-dark border border-2
-		card-t mx-2">
-
-            <p>Гадание применяется для просмотра любых межличностных отношений (партнеров по бизнесу, влюбленной пары,
-                коллег, подруг, друзей), чтобы лучше понять партнера и проанализировать сложившуюся ситуацию. Также
-                расклад помогает и лучше узнать себя, понять свои ошибки.</p>
-        </div>
     </div>
+    
 
-
-    <form action="/">
+    <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
