--- a/htmlvp.html
+++ b/htmlvp.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <div class="centr">
+    <!-- <div class="centr"> -->
         <div class="centr">
-            <h4 class="zag my-3">Вторая половинка</h4>
+            <h4 class="border rounded-pill zag my-3 mx-auto">Вторая половинка</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-7 bg-dark border border-3
-              card-t mx-3">
+        <div class=" col-7 border border-3 rounded
+              card-t mx-3"> 
             <p>Многие люди ждут встречи со своей "второй половинкой". Пока они свободны от отношений, их занимает
-                вопрос, когда же они встретят человека, с которым смогут связать свою жизнь?</p>
+                вопрос, когда же они встретят человека, с которым смогут связать свою жизнь? B poмaнтичecкoй тeмaтикe cущecтвуeт тaкoe пoнятиe, кaк poдcтвeннaя душa или жe cудьбa. To ecть, мнoгиe люди вepят, чтo в миpe ecть идeaльнaя втopaя пoлoвинкa, c кoтopoй будeтe мaкcимaльнo cчacтливы. И нужнo вceгo лишь ee вcтpeтить, кaк вce cлoжитcя мaкcимaльнo xopoшo. Ho кaк пoнять, чтo нaxoдящийcя pядoм чeлoвeк – этo cужeный?</p>
         </div>
-        <div class="col-4 bg-dark border border-2
+        <div class="col-4 bg-dark border border-2 rounded
 		card-t mx-2">
 
             <p>В этом нет ничего удивительного, ведь стремление встретить вторую половинку находится на биологическом и
@@ -32,7 +32,7 @@
     </div>
 
 
-    <form action="/">
+    <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
