--- a/htmldn.html
+++ b/htmldn.html
@@ -11,7 +11,7 @@
 <body>
     <div class="centr">
         <div class="centr">
-            <h4 class="border rounded-pill zag my-3 mx-auto">Таро Да или нет</h4>
+            <h4 class="border rounded-pill zag my-3 mx-auto">Таро Да или Нет</h4>
         </div>
     </div>
 
