--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="card mb-4 shadow-sm">
                 <img src="static/images/да_нет.jpg" alt="Foto" class="card card-img-top">
                 <div class=" card card-body">
-                    <p class="card-text">«Да-нет» поможет определиться с правильным выбором.</p>
+                    <p class="card-text">«Да-Нет» поможет определиться с правильным выбором.</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn btn-group p-0 mx-5">
                             <form action="htmldn.html">
