--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         Автор десятков раскладов в различных сферах жизни.
                         Обладательница оккультных знаний, а также эксперт в любовных отношений.
                     <p class="lead my-3 my_font"> Вы можете заказать онлайн-консультацию, написав на адрес
-                        03091983masha@gmail.com <a href="03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰
+                        03091983masha@gmail.com <a href="mailto:03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰
                     </p>
                     <p class="lead my-1 my_font"> Maria Zarubina is a psychologist-tarologist with 16 years of
                         experience.
@@ -81,7 +81,7 @@
                         Author of dozens of layouts in various areas of life. She is the owner of occult knowledge, as
                         well as an expert in love relationships.
                         <p class="lead my-3 my_font"> You can order an online consultation by writing to 03091983masha@gmail.com
-                        <a href="03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰</p>
+                        <a href="mailto:03091983masha@gmail.com"> Написать мне</a> &#128386;👩‍🦰</p>
                     </p>
                     <a href="https://www.youtube.com/@mariazarubina5655/videos" class="btn btn-warning">Читать
                         дальше</a>
