--- a/htmldn.html
+++ b/htmldn.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Таро</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+</head>
+
+<body>
+    <div class="centr">
+        <div class="centr">
+            <h4 class="rounded-pill zag my-3 mx-auto">Таро Да или Нет</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-7 rounded-pill text-center card-t mx-3">
+            <p class="table"> В жизни каждого из нас возникает сомнений сколько угодно. И неоднозначных ситуаций, в
+                которых сложно
+                сделать выбор, тоже. Очень часто мы нуждаемся в подсказке идти на какой нибудь шаг или этого делать не
+                стоит. Причём, в таких ситуациях хочется конкретного совета, а не долгих рассуждений о причинах
+                сложившихся обстоятельств. Таро – советчик объективный и беспристрастный.  </p>
+        </div>
+        <div class="col-4 rounded-pill text-center card-t mx-2">
+
+            <p class="table">Это гадание для тех, кому нужен прямой и короткий ответ «да» или «нет». Сформулируйте свой
+                вопрос, так,
+                чтобы на него можно было получить однозначный ответ. Таро поможет определиться с правильным выбором,
+            </p>
+        </div>
+    </div>
+
+
+    <form action="index.html">
+        <!--	<button class="text-bl ml-5 mt-2 "-->
+        <!--	        type="sabmit">Ha главную-->
+        <!--	</button>-->
+        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
+            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+        </div>
+    </form>
+</body>
+
+</html>
