--- a/htmlkf.html
+++ b/htmlkf.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Таро</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+</head>
+
+<body>
+    <div class="centr">
+        <div class="centr">
+            <h4 class="rounded-pill zag my-3 mx-auto ">Колесо Фортуны Таро</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-7 rounded-pill text-center card-t mx-3">
+            <p class="table">Легенда Римской мифологии гласит: «Тот кто сегодня возвышен, завтра будет унижен, а того,
+                кто пребывает
+                внизу, поворот Фортуны завтра может вознести на самый верх». Суть фразы в том, что каждый получит по
+                заслугам. Если кто-то не заслуживает быть «наверху» или достиг высот случайно либо нечестно, Колесо
+                Фортуны в один миг направит его «вниз», указав на то, чего он поистине достоин.</p>
+        </div>
+        <div class="col-4 rounded-pill text-center card-t mx-2">
+            <p class="table">Фортуна — богиня удачи и судьбы, божество случая. Непосредственно Колесо Фортуны учит
+                человека терпению,
+                показывая, что все в мире нестабильно. Карта Колесо Фортуны символизирует непредсказуемость и перемены,
+                дарованные судьбой.</p>
+        </div>
+    </div>
+
+
+    <form action="index.html">
+        <!--	<button class="text-bl ml-5 mt-2 "-->
+        <!--	        type="sabmit">Ha главную-->
+        <!--	</button>-->
+        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
+            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+        </div>
+    </form>
+</body>
+
+</html>
