--- a/htmlvm.html
+++ b/htmlvm.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Таро</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+</head>
+
+<body>
+    <div class="centr">
+        <div class="centr">
+            <h4 class="rounded-pill zag my-3 mx-auto">Будем ли мы вместе</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-7 rounded-pill text-center card-t mx-3 p-1">
+            <p class="table">Гадание применяется для просмотра любых межличностных отношений (партнеров по бизнесу,
+                влюбленной пары,
+                коллег, подруг, друзей), чтобы лучше понять партнера и проанализировать сложившуюся ситуацию. Также
+                расклад помогает и лучше узнать себя, понять свои ошибки.Данный расклад можно использовать для текущих
+                отношений, чтобы найти ответы на волнующие вопросы и лучше узнать себя и партнера, разобраться в том,
+                что происходит на самом деле.</p>
+        </div>
+        <div class="col-4 rounded-pill text-center card-t mx-2">
+
+            <p class="table">Как правило, расклады таро на вопрос о том, будем ли мы вместе – это гадание на
+                совместимость и на
+                просмотр общего будущего партнеров.Также подобные расклады помогают разобраться в сложившихся
+                отношениях, найти причины ссор и устранить недомолвки и непонимания.</p>
+        </div>
+    </div>
+
+
+    <form action="index.html">
+        <!--	<button class="text-bl ml-5 mt-2 "-->
+        <!--	        type="sabmit">Ha главную-->
+        <!--	</button>-->
+        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
+            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+        </div>
+    </form>
+</body>
+
+</html>
