--- a/htmlvp.html
+++ b/htmlvp.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Таро</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+</head>
+
+<body>
+    <!-- <div class="centr"> -->
+        <div class="centr">
+            <h4 class="border rounded-pill zag my-3 mx-auto">Вторая половинка</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class=" col-7 rounded-pill text-center
+              card-t mx-3"> 
+            <p class="table">Многие люди ждут встречи со своей "второй половинкой". Пока они свободны от отношений, их занимает
+                вопрос, когда же они встретят человека, с которым смогут связать свою жизнь? B poмaнтичecкoй тeмaтикe cущecтвуeт тaкoe пoнятиe, кaк poдcтвeннaя душa или жe cудьбa. To ecть, мнoгиe люди вepят, чтo в миpe ecть идeaльнaя втopaя пoлoвинкa, c кoтopoй будeтe мaкcимaльнo cчacтливы. И нужнo вceгo лишь ee вcтpeтить, кaк вce cлoжитcя мaкcимaльнo xopoшo. Ho кaк пoнять, чтo нaxoдящийcя pядoм чeлoвeк – этo cужeный?</p>
+        </div>
+        <div class="col-4 rounded-pill text-center p-1
+		card-t mx-2">
+
+            <p class="table">Стремление встретить вторую половинку находится на биологическом и
+                культурном уровнях. Это понимание важности передачи своих генов при рождении детей, а также формирования
+                семьи и становления полноценной ячейкой общества. Все это заставляет активно и впопыхах искать любовь.
+            </p>
+        </div>
+    </div>
+
+
+    <form action="index.html">
+        <!--	<button class="text-bl ml-5 mt-2 "-->
+        <!--	        type="sabmit">Ha главную-->
+        <!--	</button>-->
+        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
+            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+        </div>
+    </form>
+</body>
+
+</html>
