--- a/htmlkm.html
+++ b/htmlkm.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Таро</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+</head>
+
+<body>
+    <!-- <div class="centr"> -->
+        <div class="centr">
+            <h4 class=" rounded-pill zag my-3 mx-auto">Какой мужчина на пороге</h4>
+        </div> 
+    <!-- </div> --> 
+
+    <div class="row">
+        <div class="col-7 rounded  rounded-pill text-center
+              card-t mx-4 ">
+            <p class="table">Познакомились с идеальным мужчиной, но всё равно одолевают сомнения, ждёт ли вас с ним счастливая жизнь?
+                Это можно понять, узнав его характер, жизненные приоритеты, финансовое положение и наличие других
+                женщин. Вы сможете решить, стоит ли тратить время на отношения с этим человеком, или лучше построить счастье с другим.</p>
+        </div>
+        <div class="col-4 rounded-pill text-center
+		card-t mx-2">
+
+            <p class="table">Не рекомендуем самостоятельно делать такое сложное гадание, так как есть риск запутаться во взаимосвязях
+                карт и неверно их интерпретировать.Лучше обратитесь к тарологам.</p>
+        </div>
+    </div>
+
+
+    <form action="index.html">
+        <!--	<button class="text-bl ml-5 mt-2 "-->
+        <!--	        type="sabmit">Ha главную-->
+        <!--	</button>-->
+        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
+            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+        </div>
+    </form>
+</body>
+
+</html>
