--- a/html_vv.html
+++ b/html_vv.html
@@ -10,7 +10,7 @@
 	<div class="centr"><h4 class="rounded-pill zag_1 my-3 mx-auto">Как часто можно ходить к тарологу</h4></div>
 
 	<div class="row">
-		<div class="col-7 rounded-pill text-center
+		<div class="col-7 rounded
               card-t mx-3">
 				<p class="table">Бывают в Таро и аналоги психологических костылей,
 					когда человек приходит на консультации чуть ли не каждый месяц,
@@ -20,7 +20,7 @@
 					и свою жизнь в целом. Поэтому относиться к Таро надо не как к волшебной таблетке,
 					а исключительно как к инструменту диагностики и познания мира и себя.</p>
 		</div>
-		<div class="col-4 rounded-pill text-center p-2
+		<div class="col-4
 		card-t mx-2">
 
 			<p class="table">Причин популярности Таро очень много, но самая основная в том, что карты помогают разобраться в себе.
