--- a/htmlkf.html
+++ b/htmlkf.html
@@ -11,23 +11,24 @@
 <body>
     <div class="centr">
         <div class="centr">
-            <h4 class="rounded-pill zag my-3 mx-auto ">Колесо Фортуны Таро</h4>
+            <h4 class="rounded-pill zag my-3 mx-auto">Таро Да или Нет</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-7 rounded-pill text-center card-t mx-3">
-            <p class="table">Легенда Римской мифологии гласит: «Тот кто сегодня возвышен, завтра будет унижен, а того,
-                кто пребывает
-                внизу, поворот Фортуны завтра может вознести на самый верх». Суть фразы в том, что каждый получит по
-                заслугам. Если кто-то не заслуживает быть «наверху» или достиг высот случайно либо нечестно, Колесо
-                Фортуны в один миг направит его «вниз», указав на то, чего он поистине достоин.</p>
+        <div class="col-7 rounded card-t mx-4">
+            <p class="table"> В жизни каждого из нас возникает сомнений сколько угодно. И неоднозначных ситуаций, в
+                которых сложно
+                сделать выбор, тоже. Очень часто мы нуждаемся в подсказке идти на какой нибудь шаг или этого делать не
+                стоит. Причём, в таких ситуациях хочется конкретного совета, а не долгих рассуждений о причинах
+                сложившихся обстоятельств. Таро – советчик объективный и беспристрастный.  </p>
         </div>
-        <div class="col-4 rounded-pill text-center card-t mx-2">
-            <p class="table">Фортуна — богиня удачи и судьбы, божество случая. Непосредственно Колесо Фортуны учит
-                человека терпению,
-                показывая, что все в мире нестабильно. Карта Колесо Фортуны символизирует непредсказуемость и перемены,
-                дарованные судьбой.</p>
+        <div class="col-4 rounded card-t mx-2">
+
+            <p class="table">Это гадание для тех, кому нужен прямой и короткий ответ «да» или «нет». Сформулируйте свой
+                вопрос, так,
+                чтобы на него можно было получить однозначный ответ. Таро поможет определиться с правильным выбором,
+            </p>
         </div>
     </div>
 
@@ -36,11 +37,28 @@
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
-        <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
-            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+        <div class="d-grid  gap-2 d-md-block mx-1 mt-2">
+            <button class="btn btn-primary mt-2 ml-4" type="sabmit">Ha главную</button>
             <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
         </div>
     </form>
+    <div class="d-grid  gap-2 d-md-block">
+        <a href="#hideObject" class="btn btn-primary mt-2 ml-4" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            aria-controls="hideObject">Оформить заказ</a>
+
+        <div class="collapse multi-objects" id="hideObject">
+            <div class="mt-3 alert alert-success">
+                <p class="fvo">Вы можете заказать онлайн-консультацию, написав в
+                   
+                    <a href="https://www.instagram.com/tarolog_maria_zarubina/"><span class="fiv">&#10149; Instagram</span></a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script defer src="static/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
