--- a/htmlkm.html
+++ b/htmlkm.html
@@ -10,36 +10,53 @@
 
 <body>
     <!-- <div class="centr"> -->
-        <div class="centr">
-            <h4 class=" rounded-pill zag my-3 mx-auto">Какой мужчина на пороге</h4>
-        </div> 
-    <!-- </div> --> 
+    <div class="centr">
+        <h4 class=" rounded-pill zag my-3 mx-auto">Какой мужчина на пороге</h4>
+    </div>
+    <!-- </div> -->
 
     <div class="row">
-        <div class="col-7 rounded  rounded-pill text-center
-              card-t mx-4 ">
-            <p class="table">Познакомились с идеальным мужчиной, но всё равно одолевают сомнения, ждёт ли вас с ним счастливая жизнь?
+        <div class="col-7 rounded card-t mx-auto ">
+            <p class="table">Познакомились с идеальным мужчиной, но всё равно одолевают сомнения, ждёт ли вас с ним
+                счастливая жизнь?
                 Это можно понять, узнав его характер, жизненные приоритеты, финансовое положение и наличие других
-                женщин. Вы сможете решить, стоит ли тратить время на отношения с этим человеком, или лучше построить счастье с другим.</p>
+                женщин. Вы сможете решить, стоит ли тратить время на отношения с этим человеком, или лучше построить
+                счастье с другим.</p>
         </div>
-        <div class="col-4 rounded-pill text-center
-		card-t mx-2">
+        <div class="col-4 rounded card-t mx-auto">
 
-            <p class="table">Не рекомендуем самостоятельно делать такое сложное гадание, так как есть риск запутаться во взаимосвязях
+            <p class="table">Не рекомендуем самостоятельно делать такое сложное гадание, так как есть риск запутаться во
+                взаимосвязях
                 карт и неверно их интерпретировать.Лучше обратитесь к тарологам.</p>
         </div>
     </div>
-
 
     <form action="index.html">
         <!--	<button class="text-bl ml-5 mt-2 "-->
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
         <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
-            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
-            <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
+            <button class="btn btn-primary mt-2 ml-4" type="sabmit">Ha главную</button>
+
         </div>
     </form>
+
+    <div class="d-grid  gap-2 d-md-block ">
+        <a href="#hideObject" class="btn btn-primary mt-2 ml-5" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            aria-controls="hideObject">Оформить заказ</a>
+
+        <div class="collapse multi-objects" id="hideObject">
+            <div class="mt-3 alert alert-success">
+                < class="fvo">Вы можете заказать онлайн-консультацию, написав в 
+                    <a href="https://www.instagram.com/tarolog_maria_zarubina/"<span class="fiv">&#10149; Instagram</span></a>  
+                </p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script defer src="static/js/bootstrap.bundle.min.js"></script>
+    <!-- <script defer src="static/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
