--- a/htmlvm.html
+++ b/htmlvm.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row">
-        <div class="col-7 rounded-pill text-center card-t mx-3 p-1">
+        <div class="col-7 rounded card-t mx-3 p-1">
             <p class="table">Гадание применяется для просмотра любых межличностных отношений (партнеров по бизнесу,
                 влюбленной пары,
                 коллег, подруг, друзей), чтобы лучше понять партнера и проанализировать сложившуюся ситуацию. Также
@@ -24,7 +24,7 @@
                 отношений, чтобы найти ответы на волнующие вопросы и лучше узнать себя и партнера, разобраться в том,
                 что происходит на самом деле.</p>
         </div>
-        <div class="col-4 rounded-pill text-center card-t mx-2">
+        <div class="col-4 rounded card-t mx-2">
 
             <p class="table">Как правило, расклады таро на вопрос о том, будем ли мы вместе – это гадание на
                 совместимость и на
@@ -39,10 +39,28 @@
         <!--	        type="sabmit">Ha главную-->
         <!--	</button>-->
         <div class="d-grid  gap-2 d-md-block mx-4 mt-2">
-            <button class="btn btn-primary mt-2 ml-5" type="sabmit">Ha главную</button>
+            <button class="btn btn-primary mt-2 ml-4" type="sabmit">Ha главную</button>
+
             <!-- <button type="button" class="btn btn-primary" type="sabmit">Ha главную></button> -->
         </div>
     </form>
+    <div class="d-grid  gap-2 d-md-block">
+        <a href="#hideObject" class="btn btn-primary mt-2 ml-5" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            aria-controls="hideObject">Оформить заказ</a>
+
+        <div class="collapse multi-objects" id="hideObject">
+            <div class="mt-3 alert alert-success">
+                <p class="fvo">Вы можете заказать онлайн-консультацию, написав в 
+                    <a href="https://www.instagram.com/tarolog_maria_zarubina/"<span class="fiv">&#10149; Instagram</span></a>  
+                </p>
+                
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script defer src="static/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
