--- a/htmlkm.html
+++ b/htmlkm.html
@@ -47,7 +47,7 @@
 
         <div class="collapse multi-objects" id="hideObject">
             <div class="mt-3 alert alert-success">
-                < class="fvo">Вы можете заказать онлайн-консультацию, написав в 
+                Вы можете заказать онлайн-консультацию, написав в 
                     <a href="https://www.instagram.com/tarolog_maria_zarubina/"<span class="fiv">&#10149; Instagram</span></a>  
                 </p>
             </div>
